# xattr

./: .gitignore  .travis.yml  CHANGES.txt  INSTALLING.txt  MANIFEST.in  README.rst  README.txt  TODO.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-and-deploy.yml
.travis/: install.sh  run.sh
Lib/xattr/: __init__.py  tool.py
Modules/xattr/: _xattr.c
_build/: _make_constants.py
scripts/: artifacts.py
tests/: test_xattr.py
xattr/: __init__.py  _xattr.c  compat.py  constants.py  lib.py  lib_build.c  lib_build.py  pyxattr_compat.py  tool.py
xattr.egg-info/: PKG-INFO  native_libs.txt
xattr/lib_src/: xattr_darwin.c  xattr_freebsd.c  xattr_linux.c  xattr_sun.c  xattr_sunos.c
xattr/tests/: __init__.py  test_tool.py  test_xattr.py
